--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: node_js
-sudo: false
+cache: npm
 node_js:
-  - 10
-  - 9
-  - 8
-  - 7
-  - 6
+  - "stable"
+
 install:
-  - npm install
+  - npm ci
+  - npm run build
+
 script:
-  - npm test
+  - npm run test
